--- a/styles.css
+++ b/styles.css
@@ -200,6 +200,9 @@ article h2 span {
     .banner .welcome h2{
         font-size: 40px;
     }
+    nav li {
+        position: relative;
+    }
 }
 
 @media screen and (max-width: 700px) {
