--- a/styles.css
+++ b/styles.css
@@ -215,6 +215,11 @@ article h2 span {
        display: none;
 
     }
+    .banner img {
+    width: 100%;
+    max-height: 200px;
+    margin-right: 0px;
+    }
     .banner .welcome h2{
         font-size: 25px;
     }
